@@ -6,13 +6,17 @@ import com.AgriTest.model.TestSchedule;
 import com.AgriTest.model.TestCase;
 import com.AgriTest.model.ScheduleFrequency;
 import com.AgriTest.repository.TestCaseRepository;
+import com.AgriTest.exception.ValidationException;
 import org.springframework.stereotype.Component;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -31,19 +35,28 @@ public class TestScheduleMapper {
      * Converts a TestScheduleRequest DTO to a TestSchedule entity.
      * @param request The DTO containing test schedule data
      * @return TestSchedule entity with populated data
+     * @throws ValidationException if request validation fails
      * @throws EntityNotFoundException if referenced TestCase is not found
-     * @throws IllegalArgumentException if request is null or contains invalid data
      */
     public TestSchedule toEntity(TestScheduleRequest request) {
-        if (request == null) {
-            throw new IllegalArgumentException("TestScheduleRequest cannot be null");
-        }
-        
         validateRequest(request);
         
         TestSchedule testSchedule = new TestSchedule();
-        testSchedule.setTestName(request.getTestName());
-        testSchedule.setScheduleName(request.getScheduleName());
+        mapBasicFields(testSchedule, request);
+        mapFrequencyFields(testSchedule, request);
+        mapDates(testSchedule, request);
+        mapTestCase(testSchedule, request);
+        calculateNextExecution(testSchedule);
+        
+        return testSchedule;
+    }
+
+    /**
+     * Maps basic fields from request to entity
+     */
+    private void mapBasicFields(TestSchedule testSchedule, TestScheduleRequest request) {
+        testSchedule.setTestName(request.getTestName().trim());
+        testSchedule.setScheduleName(request.getScheduleName().trim());
         testSchedule.setTrialPhase(request.getTrialPhase());
         testSchedule.setAssignedPersonnel(request.getAssignedPersonnel());
         testSchedule.setLocation(request.getLocation());
@@ -51,12 +64,23 @@ public class TestScheduleMapper {
         testSchedule.setEquipmentRequired(request.getEquipmentRequired());
         testSchedule.setNotificationPreference(request.getNotificationPreference());
         testSchedule.setNotes(request.getNotes());
-        
-        // Handle frequency conversion with better error message
+        testSchedule.setDescription(request.getDescription());
+        testSchedule.setPriority(request.getPriority());
+        testSchedule.setStatus(request.getStatus());
+        testSchedule.setCreatedBy(request.getCreatedBy());
+        testSchedule.setIsActive(request.getIsActive() != null ? request.getIsActive() : true);
+    }
+
+    /**
+     * Maps and validates frequency-related fields
+     * @throws ValidationException if frequency configuration is invalid
+     */
+    private void mapFrequencyFields(TestSchedule testSchedule, TestScheduleRequest request) {
         try {
-            testSchedule.setFrequency(ScheduleFrequency.valueOf(request.getFrequency().toUpperCase()));
+            String frequencyStr = request.getFrequency().toUpperCase().trim();
+            testSchedule.setFrequency(ScheduleFrequency.valueOf(frequencyStr));
         } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException(String.format(
+            throw new ValidationException(String.format(
                 "Invalid frequency '%s'. Valid values are: %s",
                 request.getFrequency(),
                 String.join(", ", List.of(ScheduleFrequency.values()).stream()
@@ -64,77 +88,117 @@ public class TestScheduleMapper {
                     .collect(Collectors.toList()))
             ));
         }
-        
+
         testSchedule.setDayOfMonth(request.getDayOfMonth());
         testSchedule.setDayOfWeek(request.getDayOfWeek());
-        
-        // Validate schedule configuration
         validateScheduleConfiguration(testSchedule);
-        
-        // Validate dates
+    }
+
+    /**
+     * Maps and validates date fields
+     * @throws ValidationException if date configuration is invalid
+     */
+    private void mapDates(TestSchedule testSchedule, TestScheduleRequest request) {
         validateDates(request);
-        
         testSchedule.setStartDate(request.getStartDate());
         testSchedule.setEndDate(request.getEndDate());
-        testSchedule.setIsActive(request.getIsActive() != null ? request.getIsActive() : true);
-        testSchedule.setDescription(request.getDescription());
-        testSchedule.setPriority(request.getPriority());
-        testSchedule.setStatus(request.getStatus());
-        testSchedule.setCreatedBy(request.getCreatedBy());
+    }
 
-        // Handle test case relationship with better error handling
+    /**
+     * Maps and validates test case relationship
+     * @throws EntityNotFoundException if test case is not found
+     */
+    private void mapTestCase(TestSchedule testSchedule, TestScheduleRequest request) {
         if (request.getTestCaseId() != null) {
             TestCase testCase = testCaseRepository.findById(request.getTestCaseId())
                 .orElseThrow(() -> new EntityNotFoundException(
                     String.format("TestCase with ID %d not found", request.getTestCaseId())));
             testSchedule.setTestCase(testCase);
         }
-
-        // Calculate next execution date
-        calculateNextExecution(testSchedule);
-        
-        return testSchedule;
     }
 
     /**
      * Validates the test schedule request
-     * @param request The request to validate
-     * @throws IllegalArgumentException if validation fails
+     * @throws ValidationException if validation fails
      */
     private void validateRequest(TestScheduleRequest request) {
-        if (request.getTestName() == null || request.getTestName().trim().isEmpty()) {
-            throw new IllegalArgumentException("Test name is required");
+        if (request == null) {
+            throw new ValidationException("TestScheduleRequest cannot be null");
         }
-        if (request.getScheduleName() == null || request.getScheduleName().trim().isEmpty()) {
-            throw new IllegalArgumentException("Schedule name is required");
+
+        List<String> errors = new java.util.ArrayList<>();
+        
+        if (isBlank(request.getTestName())) {
+            errors.add("Test name is required");
         }
-        if (request.getFrequency() == null || request.getFrequency().trim().isEmpty()) {
-            throw new IllegalArgumentException("Frequency is required");
+        if (isBlank(request.getScheduleName())) {
+            errors.add("Schedule name is required");
         }
-        if (request.getPriority() != null && 
-            !List.of("LOW", "MEDIUM", "HIGH", "CRITICAL").contains(request.getPriority().toUpperCase())) {
-            throw new IllegalArgumentException("Invalid priority value. Must be one of: LOW, MEDIUM, HIGH, CRITICAL");
+        if (isBlank(request.getFrequency())) {
+            errors.add("Frequency is required");
         }
-        if (request.getStatus() != null && 
-            !List.of("PENDING", "IN_PROGRESS", "COMPLETED", "CANCELLED").contains(request.getStatus().toUpperCase())) {
-            throw new IllegalArgumentException("Invalid status value. Must be one of: PENDING, IN_PROGRESS, COMPLETED, CANCELLED");
+        if (isBlank(request.getTrialPhase())) {
+            errors.add("Trial phase is required");
+        }
+        if (isBlank(request.getAssignedPersonnel())) {
+            errors.add("Assigned personnel is required");
+        }
+        
+        if (!errors.isEmpty()) {
+            throw new ValidationException("Validation failed: " + String.join(", ", errors));
+        }
+    }
+
+    /**
+     * Validates schedule configuration based on frequency
+     * @throws ValidationException if configuration is invalid
+     */
+    private void validateScheduleConfiguration(TestSchedule testSchedule) {
+        switch (testSchedule.getFrequency()) {
+            case WEEKLY -> {
+                if (testSchedule.getDayOfWeek() != null) {
+                    if (testSchedule.getDayOfWeek() < 1 || testSchedule.getDayOfWeek() > 7) {
+                        throw new ValidationException(
+                            "Day of week must be between 1 (Monday) and 7 (Sunday)");
+                    }
+                }
+            }
+            case MONTHLY -> {
+                if (testSchedule.getDayOfMonth() != null) {
+                    if (testSchedule.getDayOfMonth() < 1 || testSchedule.getDayOfMonth() > 31) {
+                        throw new ValidationException(
+                            "Day of month must be between 1 and 31");
+                    }
+                }
+            }
+            case DAILY -> {
+                if (testSchedule.getDayOfWeek() != null || testSchedule.getDayOfMonth() != null) {
+                    log.warn("Day of week/month will be ignored for DAILY frequency");
+                }
+            }
         }
     }
 
     /**
      * Validates the dates in the request
-     * @param request The request containing dates to validate
-     * @throws IllegalArgumentException if validation fails
+     * @throws ValidationException if validation fails
      */
     private void validateDates(TestScheduleRequest request) {
         if (request.getStartDate() == null) {
-            throw new IllegalArgumentException("Start date is required");
+            throw new ValidationException("Start date is required");
         }
         
-        if (request.getEndDate() != null && request.getEndDate().isBefore(request.getStartDate())) {
-            throw new IllegalArgumentException(
-                String.format("End date (%s) cannot be before start date (%s)",
-                    request.getEndDate(), request.getStartDate()));
+        if (request.getEndDate() != null) {
+            if (request.getEndDate().isBefore(request.getStartDate())) {
+                throw new ValidationException(
+                    String.format("End date (%s) cannot be before start date (%s)",
+                        request.getEndDate(), request.getStartDate()));
+            }
+            
+            // Warn if end date is too far in the future (e.g., more than 2 years)
+            if (request.getEndDate().isAfter(request.getStartDate().plusYears(2))) {
+                log.warn("End date is more than 2 years after start date");
+            }
         }
         
         if (request.getStartDate().isBefore(LocalDate.now())) {
@@ -143,36 +207,7 @@ public class TestScheduleMapper {
     }
 
     /**
-     * Validates schedule configuration based on frequency.
-     * @param testSchedule The schedule to validate
-     * @throws IllegalArgumentException if configuration is invalid
-     */
-    private void validateScheduleConfiguration(TestSchedule testSchedule) {
-        switch (testSchedule.getFrequency()) {
-            case WEEKLY:
-                if (testSchedule.getDayOfWeek() != null && 
-                    (testSchedule.getDayOfWeek() < 1 || testSchedule.getDayOfWeek() > 7)) {
-                    throw new IllegalArgumentException(
-                        "Day of week must be between 1 (Monday) and 7 (Sunday)");
-                }
-                break;
-            case MONTHLY:
-                if (testSchedule.getDayOfMonth() != null && 
-                    (testSchedule.getDayOfMonth() < 1 || testSchedule.getDayOfMonth() > 31)) {
-                    throw new IllegalArgumentException(
-                        "Day of month must be between 1 and 31");
-                }
-                break;
-            default:
-                // No validation needed for DAILY frequency
-                break;
-        }
-    }
-
-    /**
-     * Converts a TestSchedule entity to a TestScheduleResponse DTO.
-     * @param testSchedule The entity to convert
-     * @return TestScheduleResponse DTO with populated data
+     * Converts a TestSchedule entity to a TestScheduleResponse DTO
      */
     public TestScheduleResponse toResponse(TestSchedule testSchedule) {
         if (testSchedule == null) {
@@ -189,7 +224,7 @@ public class TestScheduleMapper {
             .trialPhase(testSchedule.getTrialPhase())
             .assignedPersonnel(testSchedule.getAssignedPersonnel())
             .endDate(testSchedule.getEndDate())
-            .frequency(testSchedule.getFrequency() != null ? testSchedule.getFrequency().name() : null)
+            .frequency(testSchedule.getFrequency().name())
             .location(testSchedule.getLocation())
             .testObjective(testSchedule.getTestObjective())
             .equipmentRequired(testSchedule.getEquipmentRequired())
@@ -199,106 +234,76 @@ public class TestScheduleMapper {
             .dayOfMonth(testSchedule.getDayOfMonth())
             .nextExecution(testSchedule.getNextExecution())
             .isActive(testSchedule.isActive())
+            .description(testSchedule.getDescription())
+            .priority(testSchedule.getPriority())
+            .status(testSchedule.getStatus())
             .createdBy(testSchedule.getCreatedBy())
             .createdAt(testSchedule.getCreatedAt())
             .updatedAt(testSchedule.getUpdatedAt())
-            .priority(testSchedule.getPriority())
-            .status(testSchedule.getStatus())
             .build();
     }
 
     /**
-     * Converts a list of TestScheduleRequest DTOs to TestSchedule entities.
-     * @param requests List of DTOs to convert
-     * @return List of converted TestSchedule entities
-     */
-    public List<TestSchedule> toEntityList(List<TestScheduleRequest> requests) {
-        if (requests == null) {
-            return List.of();
-        }
-        return requests.stream()
-                .map(this::toEntity)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Converts a list of TestSchedule entities to TestScheduleResponse DTOs.
-     * @param schedules List of entities to convert
-     * @return List of converted TestScheduleResponse DTOs
+     * Converts a list of TestSchedule entities to TestScheduleResponse DTOs
      */
     public List<TestScheduleResponse> toResponseList(List<TestSchedule> schedules) {
         if (schedules == null) {
-            return List.of();
+            return Collections.emptyList();
         }
         return schedules.stream()
+                .filter(Objects::nonNull)
                 .map(this::toResponse)
                 .collect(Collectors.toList());
     }
 
     /**
-     * Calculates the next execution date based on schedule frequency and current date.
-     * @param testSchedule The test schedule to calculate next execution for
+     * Calculates the next execution date based on schedule frequency and current date
      */
     private void calculateNextExecution(TestSchedule testSchedule) {
         if (!testSchedule.isActive() || testSchedule.getStartDate() == null) {
-            testSchedule.setNextExecution(null);
             return;
         }
 
         LocalDate currentDate = LocalDate.now();
         LocalDate nextExecution = testSchedule.getStartDate();
 
-        // If start date is in the future, use it as next execution
-        if (nextExecution.isAfter(currentDate)) {
-            testSchedule.setNextExecution(nextExecution);
-            return;
-        }
-
-        // Calculate next execution based on frequency
-        switch (testSchedule.getFrequency()) {
-            case DAILY -> {
-                nextExecution = currentDate.plusDays(1);
-            }
-            case WEEKLY -> {
-                if (testSchedule.getDayOfWeek() != null) {
-                    nextExecution = currentDate;
-                    // Find next occurrence of the specified day of week
-                    while (nextExecution.getDayOfWeek().getValue() != testSchedule.getDayOfWeek() || 
-                           !nextExecution.isAfter(currentDate)) {
-                        nextExecution = nextExecution.plusDays(1);
+        if (nextExecution.isBefore(currentDate)) {
+            nextExecution = switch (testSchedule.getFrequency()) {
+                case DAILY -> currentDate.plusDays(1);
+                case WEEKLY -> {
+                    if (testSchedule.getDayOfWeek() != null) {
+                        LocalDate next = currentDate.plusDays(1);
+                        while (next.getDayOfWeek().getValue() != testSchedule.getDayOfWeek()) {
+                            next = next.plusDays(1);
+                        }
+                        yield next;
                     }
-                } else {
-                    nextExecution = currentDate.plusWeeks(1);
+                    yield currentDate.plusWeeks(1);
                 }
-            }
-            case MONTHLY -> {
-                if (testSchedule.getDayOfMonth() != null) {
-                    // Start from next month
-                    nextExecution = currentDate.plusMonths(1).withDayOfMonth(1);
-                    // Adjust to specified day of month, considering month length
-                    int targetDay = Math.min(testSchedule.getDayOfMonth(), nextExecution.lengthOfMonth());
-                    nextExecution = nextExecution.withDayOfMonth(targetDay);
-                    
-                    // If the calculated date is not after current date, move to next month
-                    if (!nextExecution.isAfter(currentDate)) {
-                        nextExecution = nextExecution.plusMonths(1);
-                        targetDay = Math.min(testSchedule.getDayOfMonth(), nextExecution.lengthOfMonth());
-                        nextExecution = nextExecution.withDayOfMonth(targetDay);
+                case MONTHLY -> {
+                    if (testSchedule.getDayOfMonth() != null) {
+                        LocalDate next = currentDate.plusMonths(1).withDayOfMonth(1);
+                        int maxDay = next.lengthOfMonth();
+                        yield next.withDayOfMonth(Math.min(testSchedule.getDayOfMonth(), maxDay));
                     }
-                } else {
-                    nextExecution = currentDate.plusMonths(1);
+                    yield currentDate.plusMonths(1);
                 }
-            }
+            };
         }
 
         // Check if next execution exceeds end date
-        if (testSchedule.getEndDate() != null) {
-            if (nextExecution.isAfter(testSchedule.getEndDate())) {
-                testSchedule.setIsActive(false);
-                nextExecution = testSchedule.getEndDate();
-            }
+        if (testSchedule.getEndDate() != null && nextExecution.isAfter(testSchedule.getEndDate())) {
+            testSchedule.setIsActive(false);
+            nextExecution = testSchedule.getEndDate();
         }
 
         testSchedule.setNextExecution(nextExecution);
+    }
+
+    /**
+     * Utility method to check if a string is null, empty, or only whitespace
+     */
+    private boolean isBlank(String str) {
+        return str == null || str.trim().isEmpty();
     }
 }
